adding hotdel model

--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -1,6 +1,4 @@
-<% content_for :title, "Promo Codes on Amazon" %>
-<!-- for play youtube video-->
-<%= render 'shared/play_video' %>
+<%= render 'shared/play_video' %><!-- for play youtube video-->
 
 <div class="layout">
   <div class="wrap">
