--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -96,6 +96,9 @@
   .codes .card_wrap .card .inner>.code_high>address>.bestdeals{color:#87c442;}
   .codes .card_wrap .card .inner>.code_high>address>.amz_prime{color:#e47911;}
   .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
+  .codes .card_wrap .card .inner>.code_high>.admin{}
+  .codes .card_wrap .card .inner>.code_high>.admin>ul{}
+  .codes .card_wrap .card .inner>.code_high>.admin>ul>li{float:left;margin-right:15px;}
 
   .codes .card_wrap .card .inner>.code_high .m_tooltip_common{display:none;}
   .codes .card_wrap .card .inner>.code_high .tooltip_common{margin-left:10px;position:relative;display:inline;color:#fff;padding:0 10px;border-radius:10px;}
@@ -109,7 +112,6 @@
   .codes .card_wrap .card .inner>.code_high .tooltip_orange .tooltip-content{background:#e47911;}
   .codes .card_wrap .card .inner>.code_high .tooltip_purple{background:#b400b4;}
   .codes .card_wrap .card .inner>.code_high .tooltip_purple .tooltip-content{background:#b400b4;}
-
 
   .codes .card_wrap .card .inner>.code_high>em{font-size:12px;color:#616161;display:block;}
   .codes .card_wrap .card .inner>.code_high>p{color:#616161;font-size:13px;display:inline;/*border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;*/}
