--- a/app/views/deals/_header.html.erb
+++ b/app/views/deals/_header.html.erb
@@ -15,7 +15,7 @@
           <li><a href="/deals/most_reviewed">Most-Reviewed</a></li>
           <!-- <li><a href="/deals/picked_deals">Best Deals</a></li> -->
           <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
-          <li class="coumos" ><a href="/deals/promotions">Coupon Codes & Promotions</a></li>
+          <li class="coumos" ><a href="/deals/promotions">Sales Offer & Promotions</a></li>
           <li><a href="/deals/quick_search">Quick Search</a></li>
       </ul>
     </div>
@@ -27,7 +27,7 @@
         <li><a href="/deals/most_reviewed">MOST-REVIEWED,</a></li>
         <!-- <li><a href="/deals/coupons">SALES & COUPONS,</a></li> -->
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
-        <li><a href="/deals/promotions">COUPON CODES & PROMOTIONS,</a></li>
+        <li><a href="/deals/promotions">SALES OFFER & PROMOTIONS,</a></li>
         <li><a href="/deals/quick_search">QUICK SEARCH</a></li>
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
