--- a/app/views/hotdeals/new.html.erb
+++ b/app/views/hotdeals/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Hotdeal</h1>
+<div class="wrap">  
+<%= render 'shared/header_short' %>
+  <div class="hotdeal_wrap">
+    <h1>Add New Hotdeals</h1>
+    <%= render 'form' %>
+    <%= link_to 'Back', hotdeals_path %>
+  </div>
+</div>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', hotdeals_path %>
