--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -1,23 +1,46 @@
 .hotdeal_wrap{margin-top:100px;}
-.hotdeals_nav{margin-top:100px;}
+.hotdeals_nav{margin-top:0;}
 .hotdeals_new{display:inline-block;margin-left:20px;padding:0 10px;background:#000}
 .hotdeals_new a{text-decoration:none;color:#fff;}
 
-.hotdeal_inner
-.hotdeal_inner p{margin-bottom:10px;}
-.show_wrap .show_box .show_inner h3{}
-.hotdeal_related{width:1000px;margin:30px auto 0 auto;}
+/* Show Page */
+.show_wrap .show_box .show_inner .hotdeal_inner{}
+.show_wrap .show_box .show_inner .hotdeal_inner h2{font-weight:500;line-height:1.2;font-size:20px;}
+.show_wrap .show_box .show_inner .hotdeal_inner p{font-size:15px;font-weight:400;margin:15px 0;}
+.show_wrap .show_box .show_inner .hotdeal_inner .h_price{font-size:25px;margin-bottom:0;}
+.show_wrap .show_box .show_inner .hotdeal_inner .h_price .span_01{color:#616161;text-decoration:line-through;font-size:20px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .h_price .span_02{margin-left:10px;font-size:20px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .extra_info em{color:#616161;font-weight:300;font-size:12px;display:block;}
+.show_wrap .show_box .show_inner .hotdeal_inner .extra_info em a{background:none;color:#08f;padding:0;}
+.show_wrap .show_box .show_inner .hotdeal_inner .description{margin:15px 0;border-top:1px solid #ccc;border-bottom:1px solid #ccc;padding:20px 0;}
+.show_wrap .show_box .show_inner .hotdeal_inner .btn{}
+.show_wrap .show_box .show_inner .hotdeal_inner .btn a{}
+.show_wrap .show_box .show_inner .hotdeal_inner .btn a em{font-weight:bold;font-size:15px;}
+.show_wrap .show_box .hotdeal_img{position:relative;}
+.show_wrap .show_box .show_img .mark{width:50px;background:#000;font-size:13px;padding:7px;border-radius:10px;line-height:1.1;position:absolute;top:0;left:0;}
+.show_wrap .show_box .show_img .mark span{text-align:center;color:#fff;letter-spacing:3.1px;display:block;}
+.show_wrap .show_box .show_img .mark em{display:block;text-align:center;font-size:10px;color:#fff;}
+.show_wrap .show_box .show_img .admin a{background:none;color:#000;}
+.hotdeal_related{width:1000px;margin:30px auto 0 auto;font-family: 'Montserrat', sans-serif;}
+.hotdeal_related p{text-align:center;font-size:30px;margin-bottom:20px;}
+
+/* Form Page */
+.hotdeal_form{}
+.hotdeal_form input, .hotdeal_form textarea{display:block;width:70%;height:40px;margin-bottom:15px;}
+
 @media screen and (max-width:640px){
   .hotdeals_nav{margin-top:80px;}
   .hotdeal_related{width:100%;}
-
+  .hotdeal_related p{font-size:23px;}
 }
 @media screen and (min-width:641px) and (max-width:1199px){
   .hotdeals_nav{margin-top:80px;}
   .hotdeals_new a{font-size:15px;}
   .hotdeal_related{width:100%;}
-
 }
 
+/* Form Page */
+.hotdeal_form{}
+.hotdeal_form input, .hotdeal_form textarea{display:block;width:70%;height:40px;margin-bottom:15px;}
 
 
