--- a/app/views/hotdeals/_form.html.erb
+++ b/app/views/hotdeals/_form.html.erb
@@ -1,31 +1,22 @@
-<div class="layout"><!--layout-->
-  <%= render 'shared/header_short' %>
-  <div class="wrap">
-    <div class="hotdeal_wrap">
-      <%= simple_form_for(@hotdeal) do |f| %>
-        <%= f.error_notification %>
-        <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
-      <!-- 
-        <div class="form-inputs">
-        </div>
+<div class="hotdeal_form">
+  <%= simple_form_for(@hotdeal) do |f| %>
+    <%= f.error_notification %>
+    <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-        <div class="form-actions">
-          <%= f.button :submit %>
-        </div> -->
+    <%= f.input :himage, label: 'Choose Image' %>
+    <%= f.input :h_title , label: 'Title Of Product' %>
+    <%= f.input :h_description, label: 'Description Of Product' %>
+    <%= f.input :h_image, label: 'Image URL' %>
+    <%= f.input :h_link, label: 'Product URL' %>
+    <%= f.input :h_price, label: 'Current Price' %>
+    <%= f.input :h_list_price, label: 'List Price' %>
+    <%= f.input :h_percentage, label: 'Discount Percentage' %>
+    <%= f.input :h_spare_01, label: 'Extra Deals?' %>
+    <%= f.input :h_spare_02, label: 'Coupon Deals?' %>
 
-        <%= f.input :himage %>
-        <%= f.input :h_title %>
-        <%= f.input :h_description %>
-        <%= f.input :h_image %>
-        <%= f.input :h_link %>
-        <%= f.input :h_price %>
-        <%= f.input :h_list_price %>
-        <%= f.input :h_percentage %>
-        <%= f.input :h_keyword %>
+    <%= f.input :h_keyword, label: 'Keyword' %>
 
-        <%= f.button :submit %>
+    <%= f.button :submit %>
 
-        <% end %>
-    </div>
-  </div>
+  <% end %>
 </div>
