--- a/app/views/hotdeals/edit.html.erb
+++ b/app/views/hotdeals/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing Hotdeal</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @hotdeal %> |
-<%= link_to 'Back', hotdeals_path %>
+<div class="wrap">  
+<%= render 'shared/header_short' %>
+  <div class="hotdeal_wrap">
+    <h1>Editing Hotdeal</h1>
+    <%= render 'form' %>
+    <%= link_to 'Show', @hotdeal %> |
+    <%= link_to 'Back', hotdeals_path %>
+  </div>
+</div>
