--- a/app/views/hotdeals/index.html.erb
+++ b/app/views/hotdeals/index.html.erb
@@ -4,13 +4,6 @@
 <div class="layout"><!--layout-->
   <div class="wrap">  
   <%= render 'shared/header_short' %>
-
-  <!-- <div class="deals_main_menu">
-    <ul>
-      <li>Amazon</li>
-      <li>Stores</li>
-    </ul>
-  </div> -->
   <%= render 'hotdeals/header' %>    
   
   <div class="codes common_layout">
@@ -24,7 +17,7 @@
         <h2>Daily Deals | Hand-Pick On Amazon Oct. 03. 2019.  <% if can? :update, @hotdeals %><div class="hotdeals_new"><%= link_to 'Add New Deals', new_hotdeal_path %></div><% end %></h2>
         
         <div class="sort_box clearfix">
-          <!-- <div class="deals_des">We pick the best deals from all categories of Amazon!! We just hope you like it :D</div> -->
+    
           <ul>
             <li><a href="/deals/bestdeals" class="pure-button">All Deals</a></li>
             <li><a href="#" class="pure-button sort1">Price High</a></li>
@@ -37,35 +30,7 @@
         <div class="card_wrap sort-list">
           <%= render 'shared/amz_search' %>
           <%= render 'deals_days/note_wadiz' %>
-
-          <% @hotdeals.each do |hotdeal| %>
-           <div class="card clearfix" data-score="<%= hotdeal.h_percentage %>" data-price="<%= hotdeal.h_price %>">
-            <div class="image_box">
-              <a target="_blank" href="<%= hotdeal.h_link %>"><img src="<%= hotdeal.h_image %>" alt="<%= hotdeal.h_title %>" /></a>
-            </div>
-            <div class="inner">
-              <span class="regular"><em><%= hotdeal.h_percentage %>% OFF</em> + free shipping</span>
-              <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
-              <!-- <p><a target="_blank" href="<%= hotdeal.h_link %>"><%= hotdeal.h_title %></a></p> -->
-              <p><%= link_to hotdeal.h_title, hotdeal %></p>
-              <div class="code_high">
-               <address><span class="dis_price bestdeals">$<%= hotdeal.h_price %></span><span class="ori_price">$<%= hotdeal.h_list_price %></span></address>
-               <em>*Pricing may change and deals can expire fast. <%= link_to 'More Detail', hotdeal %></em>
-               <% if can? :update, @hotdeals %>
-                 <div class="admin">
-                  <ul>
-                   <li><%= link_to 'Show', hotdeal %></li>
-                   <li><%= link_to 'Edit', edit_hotdeal_path(hotdeal) %></li>
-                   <li><%= link_to 'Destroy', hotdeal, method: :delete, data: { confirm: 'Are you sure?' } %></li>
-                  </ul>
-                 </div><!--/.amdin-->
-               <% end %>
-              </div><!--/.code_high-->
-            </div><!--/.inner --> 
-            <div class="deal_btn"><a target="_blank" href="<%= hotdeal.h_link %>">Shop Now at Amazon</a></div>
-           </div>
-          <% end %>
-
+          <%= render 'hotdeals/body_hotdeals' %>
         </div>
 
         <!-- Note for mobile -->
