--- a/app/views/hotdeals/_form.html.erb
+++ b/app/views/hotdeals/_form.html.erb
@@ -4,6 +4,7 @@
     <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
     <%= f.input :himage, label: 'Choose Image' %>
+    <%= f.select :h_spare_03, options_for_select([["Do You Have A Banner?", ""], "YES"])%><br /><br />
     <%= f.input :h_title , label: 'Title Of Product' %>
     <%= f.input :h_description, label: 'Description Of Product' %>
     <%= f.input :h_image, label: 'Image URL' %>
@@ -13,7 +14,6 @@
     <%= f.input :h_percentage, label: 'Discount Percentage' %>
     <%= f.input :h_spare_01, label: 'Extra Deals?' %>
     <%= f.input :h_spare_02, label: 'Coupon Deals?' %>
-
     <%= f.input :h_keyword, label: 'Keyword' %>
 
     <%= f.button :submit %>
