--- a/app/views/guides/index.html.erb
+++ b/app/views/guides/index.html.erb
@@ -24,48 +24,12 @@
           </div>
           <div class="btn"><a href="/guides/Guide_Link">Read More</a></div>
         </div> -->
-
-        <div class="filter-node promotion_box" data-filter='["Categories","gift for who is crazy about organizing something everywhere"]'>
-          <div class="image_box"><a href="/guides/halloween"><img src="Image_URL" alt=""></a></div>
-          <div class="node-box inner">
-            <h2><a href="/guides/Guide_Link">gift for who is crazy about organizing something everywhere</a></h2>
-            <span>Last Updated: Mon. Day. 2019</span>
-          </div>
-          <div class="btn"><a href="/guides/Guide_Link">Read More</a></div>
-        </div>
-
-        <div class="filter-node promotion_box" data-filter='["characters","Gift for people who are CRAZY about Mickey Mouse"]'>
-          <div class="image_box"><a href="/guides/guide_04"><img src="https://images.unsplash.com/photo-1528066588405-9e20509b9e34?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="mickeymouse"></a></div>
-          <div class="node-box inner">
-            <h2><a href="/guides/guide_04">Gift for people who are CRAZY about Mickey Mouse</a></h2>
-            <span>Last Updated: Mon. Day. 2019</span>
-          </div>
-          <div class="btn"><a href="/guides/guide_04">Read More</a></div>
-        </div>
-
-        <div class="filter-node promotion_box" data-filter='["characters","Gift for people who are CRAZY about BATMAN!"]'>
-          <div class="image_box"><a href="/guides/guide_02"><img src="https://images.unsplash.com/photo-1497124401559-3e75ec2ed794?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="batman"></a></div>
-          <div class="node-box inner">
-            <h2><a href="/guides/guide_02">Gift for people who are CRAZY about BATMAN!</a></h2>
-            <span>Last Updated: Jul. 09. 2019</span>
-          </div>
-          <div class="btn"><a href="/guides/guide_02">Read More</a></div>
-        </div>
-
-        <div class="filter-node promotion_box" data-filter='["characters","Gift for people who are CRAZY about MARVEL!"]'>
-          <div class="image_box"><a href="/guides/guide_03"><img src="https://images.unsplash.com/photo-1505489435671-80a165c60816?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="marvel"></a></div>
-          <div class="node-box inner">
-            <h2><a href="/guides/guide_03">Gift for people who are CRAZY about MARVEL!</a></h2>
-            <span>Last Updated: Jul. 10. 2019</span>
-          </div>
-          <div class="btn"><a href="/guides/guide_03">Read More</a></div>
-        </div>
-
-        <div class="filter-node promotion_box" data-filter='["color","Gift for people who are crazy about PINK!"]'>
-          <div class="image_box"><a href="/guides/halloween"><img src="https://images.unsplash.com/photo-1490367605959-06955305859b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="pink"></a></div>
+        
+        <div class="filter-node promotion_box" data-filter='["special","halloween"]'>
+          <div class="image_box"><a href="/guides/halloween"><img src="https://images.unsplash.com/photo-1508361001413-7a9dca21d08a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="halloween"></a></div>
           <div class="node-box inner">
             <h2><a href="/guides/halloween">Halloween</a></h2>
-            <span>Last Updated: Jul. 09. 2019</span>
+            <!-- <span>Last Updated: Jul. 09. 2019</span> -->
           </div>
           <div class="btn"><a href="/guides/halloween">Read More</a></div>
         </div>
