--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -130,9 +130,9 @@
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span>em{font-size:11px;text-decoration:line-through;color:#616161;margin-left:1%;}
   .codes .card_wrap .card .deal_btn{float:left;width:20%;text-align:center;margin:60px 1.5% 0 1.5%;}
   .codes .card_wrap .card .promo_btn{margin-top:90px;}
-  .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#000;display:inline-block;font-family: 'Montserrat', sans-serif;font-weight:bold;border:3px solid #000;padding:10px 5px;position:relative;}
-  .codes .card_wrap .card .deal_btn a .image{width:20px;display:inline-block;margin-left:3px;position:absolute;top:11px;left:4px;}
-  .codes .card_wrap .card .deal_btn a .image img{width:100%;}
+  .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#000;display:inline-block;font-family: 'Montserrat', sans-serif;font-weight:bold;border:3px solid #000;padding:10px 5px;}
+  .codes .card_wrap .card .deal_btn em{background:#000;color:#fff;padding:5px 11.7px;font-size:12.5px;}
+  .codes .card_wrap .card .deal_btn em.stock_m{display:none;}
   .codes .card_wrap .card .deal_btn p{color:#ff3333;}
 }
 
@@ -219,11 +219,11 @@
 
   .codes .card_wrap .card .inner>.code_high>em{font-size:11px;color:#616161;display:block;margin-top:3px;}
   .codes .card_wrap .card .inner>.code_high>p{display:inline;/*border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;*/}
-  .codes .card_wrap .card .inner>.code_high>.mobile_code{display:block;margin-bottom:10px;}
-  .codes .card_wrap .card .inner>.code_high>p>span{font-weight:400;position:relative;top:0.4em;}
-  .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;font-weight:500;}
+  .codes .card_wrap .card .inner>.code_high>.mobile_code{display:block;}
+  .codes .card_wrap .card .inner>.code_high>p>span{font-weight:400;position:relative;top:0.4em;font-size:10px;}
+  .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;font-weight:500;font-size:12px;}
   .codes .card_wrap .card .inner>.code_high>p>span>.m_codes{background:#000;color:#fff;padding:5px 10px;border-radius:10px;line-height:38px;}
-  .codes .card_wrap .card .inner>.code_high>.ex_date{display:block;font-size:13px;color:#616161;}
+  .codes .card_wrap .card .inner>.code_high>.ex_date{display:block;font-size:11px;color:#616161;}
   .codes .card_wrap .card .inner>.code_high>ul{}
   .codes .card_wrap .card .inner>.code_high>ul>li{margin-bottom:10px;}
   .codes .card_wrap .card .inner>.code_high>ul>li>p{font-size:17px;}
@@ -233,9 +233,9 @@
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span{}
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span>em{font-size:11px;text-decoration:line-through;color:#616161;margin-left:1%;}
   .codes .card_wrap .card .deal_btn{float:none;width:100%;margin:10px 0;text-align:center;}
-  .codes .card_wrap .card .deal_btn a{text-decoration:none;margin:20px 0 0 0;padding:10px 20px;font-family: 'Montserrat', sans-serif;font-weight:bold;background:#000;color:#fff;display:block;border-radius:10px;position:relative;}
-  .codes .card_wrap .card .deal_btn a .image{width:20px;display:inline-block;margin-left:3px;position:absolute;top:11px;left:4px;}
-  .codes .card_wrap .card .deal_btn a .image img{width:100%;}
+  .codes .card_wrap .card .deal_btn a{text-decoration:none;margin:20px 0 0 0;padding:10px 20px;font-family: 'Montserrat', sans-serif;font-weight:bold;background:#000;color:#fff;display:block;border-radius:10px;}
+  .codes .card_wrap .card .deal_btn em{display:none;}
+  .codes .card_wrap .card .deal_btn em.stock_m{color:#ff4d4d;text-align:left;margin-left:7px;display:block;margin-bottom:-20px;}
   .codes .card_wrap .card .deal_btn p{color:#ff3333;margin-top:10px;}
   .codes .rt_cnt .updating{font-size:30px;font-size:20px;font-family: 'Anton', sans-serif;margin-bottom:100px;}
   .codes .rt_cnt .updating a{display:block;text-decoration:none;color:#fff;background:#000;padding:5px 10px;}
@@ -263,10 +263,13 @@
   .codes .rt_cnt .sort_box ul li a{border-radius:10px;text-decoration:none;color:#fff;display:block;background:#000;text-align:center;padding:10px 0px;}
   .codes .most_categories .toggle>ul>li{width:50%;}
   .codes .card_wrap .deals_description{margin-bottom:10px;padding:0 5px;color:#616161;}
-  .codes .card_wrap .card .inner>.code_high>.mobile_code{display:block;margin-bottom:13px;}
+  .codes .card_wrap .card .inner>.code_high>.mobile_code{display:block;}
+  .codes .card_wrap .card .inner>.code_high>.ex_date{font-size:11px;color:#616161;}
+  .codes .card_wrap .card .inner>.code_high>em{font-size:11px;}
+  .codes .card_wrap .card .inner>.code_high>p>span{font-size:12px;}
+  .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:14px;}
   .codes .card_wrap .card .inner>.code_high>p>span>.m_codes{background:#000;color:#fff;padding:5px 10px;border-radius:10px;line-height:38px;}
-
-  .codes .card_wrap .card .deal_btn a .image{width:17px;left:0px;}
+  .codes .card_wrap .card .deal_btn em{display:block;font-size:9px;padding:5px 14.5px;}
   
   .codes .card_wrap .card .inner>.code_high .tooltip_common{display:none;}
   .codes .card_wrap .card .inner>.code_high .m_tooltip_common{display:block;position:relative;display:inline;color:#fff;padding:0 10px;border-radius:10px;}
