--- a/app/views/deals/_body_most_reviewed.html.erb
+++ b/app/views/deals/_body_most_reviewed.html.erb
@@ -58,6 +58,46 @@
   <a target="_blank" href="https://amzn.to/326a7If" class="overlay-container" data-overlay-text="Wi-Fi Extender"><img src="https://images.unsplash.com/photo-1560622496-c49bec679e71?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Wi-Fi Extender" class="overlay-img" /><p>Wi-Fi Extender</p></a>
 </div>
 
+<!-- <div class="filter-node most_box" data-filter='["tech","Unlocked Cell Phones"]'>
+<a target="_blank" href="https://amzn.to/2p2J0zc" class="overlay-container" data-overlay-text="Unlocked Cell Phones"><img src="https://coolbackgrounds.io/images/backgrounds/black/pure-black-background-f9eeb41f.jpg" alt="Unlocked Cell Phones" class="overlay-img" /><p>Unlocked Cell Phones</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["tech","Mobile Wifi Hotspot"]'>
+<a target="_blank" href="https://amzn.to/2LUq3YK" class="overlay-container" data-overlay-text="Mobile Wifi Hotspot"><img src="https://coolbackgrounds.io/images/backgrounds/black/pure-black-background-f9eeb41f.jpg" alt="Mobile Wifi Hotspot" class="overlay-img" /><p>Mobile Wifi Hotspot</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["tech","Charging & Data Cables"]'>
+<a target="_blank" href="https://amzn.to/2oocuYy" class="overlay-container" data-overlay-text="Charging & Data Cables"><img src="https://coolbackgrounds.io/images/backgrounds/black/pure-black-background-f9eeb41f.jpg" alt="Charging & Data Cables" class="overlay-img" /><p>Charging & Data Cables</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["tech","Chargers & Power Adapters"]'>
+<a target="_blank" href="https://amzn.to/35ijc2G" class="overlay-container" data-overlay-text="Chargers & Power Adapters"><img src="https://coolbackgrounds.io/images/backgrounds/black/pure-black-background-f9eeb41f.jpg" alt="Chargers & Power Adapters" class="overlay-img" /><p>Chargers & Power Adapters</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["tech","FM Transmitters"]'>
+<a target="_blank" href="https://amzn.to/31XY0gq" class="overlay-container" data-overlay-text="FM Transmitters"><img src="https://coolbackgrounds.io/images/backgrounds/black/pure-black-background-f9eeb41f.jpg" alt="FM Transmitters" class="overlay-img" /><p>FM Transmitters</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["tech","Desktops"]'>
+<a target="_blank" href="https://amzn.to/2OrTa7m" class="overlay-container" data-overlay-text="Desktops"><img src="https://coolbackgrounds.io/images/backgrounds/black/pure-black-background-f9eeb41f.jpg" alt="Desktops" class="overlay-img" /><p>Desktops</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["tech","Laptops"]'>
+<a target="_blank" href="https://amzn.to/2OuwDXG" class="overlay-container" data-overlay-text="Laptops"><img src="https://coolbackgrounds.io/images/backgrounds/black/pure-black-background-f9eeb41f.jpg" alt="Laptops" class="overlay-img" /><p>Laptops</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["tech","Tablets"]'>
+<a target="_blank" href="https://amzn.to/35pMwoi" class="overlay-container" data-overlay-text="Tablets"><img src="https://coolbackgrounds.io/images/backgrounds/black/pure-black-background-f9eeb41f.jpg" alt="Tablets" class="overlay-img" /><p>Tablets</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["tech","Data Storage"]'>
+<a target="_blank" href="https://amzn.to/33af4A6" class="overlay-container" data-overlay-text="Data Storage"><img src="https://coolbackgrounds.io/images/backgrounds/black/pure-black-background-f9eeb41f.jpg" alt="Data Storage" class="overlay-img" /><p>Data Storage</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["tech","Computer Monitors"]'>
+<a target="_blank" href="https://amzn.to/336P9Jw" class="overlay-container" data-overlay-text="Computer Monitors"><img src="https://coolbackgrounds.io/images/backgrounds/black/pure-black-background-f9eeb41f.jpg" alt="Computer Monitors" class="overlay-img" /><p>Computer Monitors</p></a> 
+</div>
+ -->
 
 <!-- Main Categories Two -->
 <div class="filter-node most_box most_main" data-filter='["Categories","Categories"]'>
