--- a/app/views/hotdeals/index.html.erb
+++ b/app/views/hotdeals/index.html.erb
@@ -31,6 +31,7 @@
           <%= render 'shared/amz_search' %>
           <%= render 'deals_days/note_wadiz' %>
           <%= render 'hotdeals/body_hotdeals' %>
+
         </div>
 
         <!-- Note for mobile -->
@@ -47,6 +48,59 @@
 
     
     </div><!--./codes-->
+
+
+    <div class="hotdeal_card">
+      <div class="card_image"><img src="https://images-na.ssl-images-amazon.com/images/I/51hd7WEBurL.jpg"></div>
+      <div class="inner">
+        <p>Keto BHB - Exogenous Ketones - Carb-Free Energy Booster, Fuels Ketosis, Boosts Metabolism and Low Carb Diet Support for Healthy Weight Loss - 60 Capsules</p>
+        <div class="pricing">
+          <span class="current">$100.00</span>
+          <em>$200.00</em>&nbsp;<span class="was">(50% Off + free shipping)</span>
+        </div>
+        <div class="btn"><a href="#n">Buy Now</a></div>
+      </div>
+    </div>
+
+    <div class="hotdeal_card">
+      <div class="card_image"><img src="https://images-na.ssl-images-amazon.com/images/I/51hd7WEBurL.jpg"></div>
+      <div class="inner">
+        <p>Keto BHB - Exogenous Ketones - Carb-Free Energy Booster...</p>
+        <div class="pricing">
+          <span class="current">$100.00</span>
+          <em>$200.00</em><span class="was">50% Off</span>
+        </div>
+        <div class="btn"><a href="#n">Buy Now</a></div>
+      </div>
+    </div>
+
+    <div class="hotdeal_card">
+      <div class="card_image"><img src="https://images-na.ssl-images-amazon.com/images/I/51hd7WEBurL.jpg"></div>
+      <div class="inner">
+        <p>Keto BHB - Exogenous Ketones - Carb-Free Energy Booster...</p>
+        <div class="pricing">
+          <span class="current">$100.00</span>
+          <span class="was">50% Off</span><em>$200.00 </em>
+        </div>
+        <div class="btn"><a href="#n">Buy Now</a></div>
+      </div>
+    </div>
+
+    <div class="hotdeal_card">
+      <div class="card_image"><img src="https://images-na.ssl-images-amazon.com/images/I/51hd7WEBurL.jpg"></div>
+      <div class="inner">
+        <p>Keto BHB - Exogenous Ketones - Carb-Free Energy Booster...</p>
+        <div class="pricing">
+          <span class="current">$1,200.00</span>
+          <em>$1,500.00</em><span class="was">(50% Off + free shipping)</span>
+        </div>
+        <div class="btn"><a href="#n">Buy Now</a></div>
+      </div>
+    </div>
+
+
+
+
   </div><!--./warp-->
 </div><!--./layout-->
 <script><%= render(:partial => 'hotdeals', :handlers => [:erb], :formats => [:js]) %></script>
