--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -1,11 +1,27 @@
 .hotdeal_wrap{margin-top:100px;}
-.hotdeals_nav{margin-top:0;}
+.hotdeals_nav{margin-top:80px;}
 .hotdeals_new{display:inline-block;margin-left:20px;padding:0 10px;background:#000}
 .hotdeals_new a{text-decoration:none;color:#fff;}
 .show_banner{}
 .show_banner .banner_option{display:none;}
 .show_banner .banner_img{border-bottom:1px solid #ccc;padding-bottom:10px;}
 .show_banner .banner_img img{width:100%;}
+
+
+/* Index Page */
+.hotdeal_card{float:left;width:23%;margin:1%;box-shadow: 0px 13px 40px -24px rgba(0,0,0,0.15);}
+.hotdeal_card .card_image{padding:15px;}
+.hotdeal_card .card_image img{width:100%;}
+.hotdeal_card .inner{padding:15px;}
+.hotdeal_card .inner p{font-size:12px;line-height:1.3;}
+.hotdeal_card .inner .pricing{margin:10px 0;color:#616161;}
+.hotdeal_card .inner .pricing .current{display:block;font-size:25px;color:#87c442;font-weight:600;}
+.hotdeal_card .inner .pricing .was{}
+.hotdeal_card .inner .pricing em{text-decoration:line-through;}
+.hotdeal_card .inner .btn{}
+.hotdeal_card .inner .btn a{text-decoration:none;text-align:center;display:block;color:#616161;border:1px solid #ccc;padding:7px 10px;border-radius:3px;}
+.hotdeal_card .inner .btn a em{text-decoration:line-through;}
+.hotdeal_card .inner .btn a:hover{background:#000;color:#fff;border:1px solid #000;}
 
 /* Show Page */
 .show_wrap .show_box .show_inner .hotdeal_inner{}
@@ -31,6 +47,7 @@
 /* Form Page */
 .hotdeal_form{}
 .hotdeal_form input, .hotdeal_form textarea{display:block;width:70%;height:40px;margin-bottom:15px;}
+
 
 @media screen and (max-width:640px){
   .hotdeals_nav{margin-top:80px;}
