--- a/app/views/guides/index.html.erb
+++ b/app/views/guides/index.html.erb
@@ -28,7 +28,7 @@
         <div class="filter-node promotion_box" data-filter='["special","halloween"]'>
           <div class="image_box"><a href="/guides/halloween"><img src="https://images.unsplash.com/photo-1508361001413-7a9dca21d08a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="halloween"></a></div>
           <div class="node-box inner">
-            <h2><a href="/guides/halloween">Halloween</a></h2>
+            <h2><a href="/guides/halloween">The Best Halloween Gift Ideas For Everyone</a></h2>
             <!-- <span>Last Updated: Jul. 09. 2019</span> -->
           </div>
           <div class="btn"><a href="/guides/halloween">Read More</a></div>
