--- a/app/views/hotdeals/_body_hotdeals.html.erb
+++ b/app/views/hotdeals/_body_hotdeals.html.erb
@@ -2,6 +2,7 @@
  <div class="card clearfix" data-score="<%= hotdeal.h_percentage %>" data-price="<%= hotdeal.h_price %>">
   <div class="image_box">
     <a target="_blank" href="<%= hotdeal.h_link %>"><img src="<%= hotdeal.h_image %>" alt="<%= hotdeal.h_title %>" /></a>
+    <!-- < link_to (image_tag hotdeal.himage.url(:small)), hotdeal > -->
   </div>
   <div class="inner">
     <span class="regular"><em><%= hotdeal.h_percentage %>% OFF</em> + free shipping</span>
